data/derived/fa15/progs/unify/prog0253.ml.out
Characters 157-158:
  | Average(c,d) -> ((c +. d)/.2)
                      ^
Error: This expression has type expr but an expression was expected of type
         float
